--- a/chinachu/sample.env
+++ b/chinachu/sample.env
@@ -1,1 +1,4 @@
 MIRAKURUN_PATH=http://host:40772/path/to/mirakurun
+RULES_PATH=/path/to/rules.json
+DATA_PATH=/path/to/chinachu/data
+VIDEO_PATH=/path/to/chinachu/video
