--- a/mirakurun/Dockerfile
+++ b/mirakurun/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12-buster AS build
+FROM node:14-buster AS build
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
@@ -9,8 +9,7 @@ RUN apt-get update \
 RUN curl -sL https://github.com/stz2012/libarib25/archive/5b24f2f.tar.gz | tar zxv \
     && cd libarib25-* \
     && cmake . && make \
-    && make install \
-    && rm -rf libarib25-*
+    && make install
 
 WORKDIR /usr/local/src
 RUN curl -sL http://www13.plala.or.jp/sat/recdvb/recdvb-1.3.2.tgz | tar zxv \
@@ -18,19 +17,17 @@ RUN curl -sL http://www13.plala.or.jp/sat/recdvb/recdvb-1.3.2.tgz | tar zxv \
     && ./autogen.sh \
     && ./configure --enable-b25 \
     && make \
-    && make install \
-    && rm -rf recdvb-1.3.2
+    && make install
 
-RUN npm install -g pm2 \
-    && npm install mirakurun -g --unsafe-perm --production
-
-
-FROM node:12-buster-slim
-WORKDIR /usr/local/lib/node_modules/mirakurun
 ENV DOCKER=YES
+RUN npm install mirakurun -g --unsafe-perm --production
+
+
+FROM node:14-buster-slim
+WORKDIR /usr/local/lib/node_modules/mirakurun
 
 RUN apt-get update \
-    && apt-get -y --no-install-recommends install pcscd libpcsclite-dev tzdata \
+    && apt-get -y --no-install-recommends install tzdata pcscd libpcsclite-dev pcsc-tools \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=build /usr/local/lib/libarib25.so.0.2.5 /usr/local/lib/
@@ -42,5 +39,6 @@ COPY --from=build /usr/local/lib/node_modules/mirakurun /usr/local/lib/node_modu
 COPY config/ /usr/local/etc/mirakurun/
 COPY services.sh /usr/local/bin/
 
+ENV DOCKER=YES
 CMD [ "/usr/local/bin/services.sh" ]
 EXPOSE 40772 41772
