chore: fix configurations

--- a/mirakurun/docker-compose.yml
+++ b/mirakurun/docker-compose.yml
@@ -17,10 +17,18 @@ services:
       - /dev/bus:/dev/bus
       - /dev/dvb:/dev/dvb
     volumes:
-      - /usr/local/mirakurun/run/:/var/run/
-      - /usr/local/mirakurun/opt/:/opt/
-      - ./config/:/app-config/
-      - /usr/local/mirakurun/data/:/app-data/
+      - type: bind
+        source: /opt/mirakurun/run/
+        target: /var/run/
+      - type: bind
+        source: /opt/mirakurun/opt/
+        target: /opt/
+      - type: bind
+        source: /opt/mirakurun/config/
+        target: /app-config/
+      - type: bind
+        source: /opt/mirakurun/data/
+        target: /app-data/
     restart: always
     logging:
       driver: json-file
